applications/base/label-ambient.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
    kubernetes.io/metadata.name: lumina
    kustomize.toolkit.fluxcd.io/name: flux-system
    kustomize.toolkit.fluxcd.io/namespace: flux-system
  name: lumina
  resourceVersion: "13146"
  uid: bccb3643-8a24-470c-87a7-602e8fed93b7
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
