applications/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lumina
  labels:
    name: lumina
