applications/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-httproute
  namespace: lumina
spec:
  parentRefs:
  - name: frontend-gateway
    namespace: lumina
  hostnames:
  - "frontend.codezap.win"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-svc
      port: 4321
  - matches:
    - path:
        type: PathPrefix
        value: /api/auth/login
    backendRefs:
    - name: backend-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /task/indices
    backendRefs:
    - name: backend-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /task/search
    backendRefs:
    - name: backend-svc
      port: 8080
